# better-make

./: .gitignore  README.md  main.py  pyproject.toml
src/: main.py  step.py
src/compilers/: GCC.py  clang.py
src/linkers/: GCC.py  __init__.py  clang.py
src/zake/: __init__.py  config.py  step.py
src/zake/_common/: __init__.py
src/zake/compilers/: GCC.py  __init__.py  _compilers.py  clang.py
src/zake/linkers/: AR.py  GCC.py  __init__.py  _linkers.py  clang.py
src/zake/step/: __init__.py  _step.py  file_path.py  install_file.py  path_step.py
src/zake/util/: __init__.py  file_path.py  install_file.py
src/zmake/: dirs.py  main.py
src/zmake/compilers/: __init__.py
src/zmake/linkers/: AR.py
