[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zake"
license = "Apache-2.0"
description = "Build system for primarily C/C++ projects based on Zig's build system"
version = "0.0.1"
authors = [{ name = "Ishan Karmakar", email = "ishan.karmakar24@gmail.com" }]
readme = "README.md"
keywords = ["build-system", "zig", "c", "cpp", "make"]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]

[project.urls]
Repository = "https://github.com/ishan-karmakar/better-make"
Issues = "https://github.com/ishan-karmakar/better-make/issues"